--- a/Portfolio_project/Portfolio.css
+++ b/Portfolio_project/Portfolio.css
@@ -1,1 +1,270 @@
+* {
+    padding: 0;
+    margin: 0;
+    list-style: none;
+    /* removes li styles eg. dot, square */
+    box-sizing: border-box;
+}
 
+html {
+    scroll-behavior: smooth;
+}
+
+body {
+    font-family: Helvetica, sans-serif;
+}
+
+/* -navigation---------------------------------------------------- */
+nav {
+    background: rgb(0, 0, 0);
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0, 1);
+    position: fixed;
+    /* Fixed position */
+    top: 0;
+    /* Stay on top */
+    width: 100%;
+    /* Full width */
+    z-index: 1000;
+    /* Ensure it stays above other content */
+}
+
+nav ul {
+    width: 100%;
+    display: flex;
+    justify-content: flex-end;
+    /* x-main-axis */
+    align-items: center;
+    /* y-cross-axis */
+}
+
+nav ul li {
+    height: 70px;
+}
+
+nav a {
+    display: flex;
+    align-items: center;
+    /* y-cross-axis */
+    height: 100%;
+    padding: 20px 20px;
+    text-decoration: none;
+    color: rgb(255, 255, 255);
+    border-radius: 15px;
+    font-weight: bolder;
+}
+
+.logo {
+    max-width: 40px;
+    height: auto;
+    margin: 5px 20px;
+}
+
+nav li:first-child {
+    margin-right: auto;
+    /* logo to left */
+}
+
+a:hover {
+    background-color: rgb(125, 125, 125);
+    transition: .1s;
+}
+
+/* ---------------------------------------------------------- */
+/* Container holding the cover-image and the text */
+.cover-img {
+    position: relative;
+    min-height: 100vh;
+    background-image: url(https://img.freepik.com/free-photo/photorealistic-view-tree-nature-with-branches-trunk_23-2151478104.jpg?t=st=1723280542~exp=1723284142~hmac=5149bca255e25d7f8d3e5fd80b249a63ee3eb29f995218c78588b60c35e2ecd8&w=1380);
+    background-size: cover;
+    background-repeat: no-repeat;
+    background-position: center;
+}
+
+div.cover-text {
+    position: absolute;
+    text-align: center;
+    font-size: 2.5em;
+    color: white;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    font-weight: bolder;
+}
+
+/* ---scroll down button--------------------------------------------- */
+
+section {
+    height: 110vh;
+    position: relative;
+}
+
+a#scroll-btn {
+    position: absolute;
+    height: 5em;
+    width: 2em;
+    border: 0.2em solid #ffffff;
+    margin: auto;
+    left: 0;
+    right: 0;
+    bottom: 6.25em;
+    border-radius: 3em;
+}
+
+a#scroll-btn:before {
+    position: absolute;
+    content: "";
+    margin: auto;
+    left: 0;
+    right: 0;
+
+    height: 1.2em;
+    width: 1.2em;
+    background-color: #ffffff;
+    border-radius: 50%;
+    animation: move-down 2s infinite;
+}
+
+@keyframes move-down {
+    10% {
+        opacity: 0.5;
+    }
+
+    100% {
+        transform: translateY(5.3em);
+        opacity: 0;
+    }
+}
+
+a#scroll-btn:after {
+    position: absolute;
+    width: 5em;
+    display: block;
+    width: 12em;
+    text-align: center;
+    left: -4.2em;
+    bottom: -2.5em;
+    font-size: 1.6em;
+    color: #ffffff;
+    letter-spacing: 3px;
+    font-weight: 600;
+}
+
+/* ---separator--------------------------------------------- */
+
+.separator {
+    width: 100%;
+    height: 70px;
+    background-color: #e8e8e8;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+    
+    font-size: 1.5rem;
+    font-weight: bolder;
+}
+
+/* ---about--------------------------------------------- */
+
+.about-segment {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    margin: 20px auto;
+}
+
+.profile-image img {
+    width: 200px;
+    height: auto;
+}
+
+.about-text {
+    width: 40%;
+    text-align: justify;
+}
+
+.profile-image  {
+    margin-right: 20px;
+}
+
+.about-text {
+    margin-left: 20px;
+}
+
+/* ---projects grid--------------------------------------------- */
+#projects {
+    margin: 20px auto;
+}
+
+.projects-grid {
+    display: grid;
+    grid-template-columns: repeat(auto-fit, minmax(400px, 1fr));
+    gap: 20px;
+    padding: 20px;
+}
+
+.project-image {
+    height: 80%;
+    width: 100%;
+    object-fit: cover;
+}
+
+.project {
+    border: 1px solid black;
+    text-decoration: none;
+    background-color: #e8e8e8;
+}
+
+.project-title {
+    text-align: center;
+    padding-top: 10px;
+    font-weight: bold;
+    color: black;
+}
+/* ---contact--------------------------------------------- */
+.connect {
+    font-size: large;
+    font-weight: bolder;
+    color: black;
+    text-align: center;
+    margin: 20px auto;
+}
+
+.inline {
+    display: inline-block;
+    padding: 0 20px;
+}
+
+.links {
+    margin: 20px auto;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+
+/* ---for tablets--------------------------------------------- */
+@media (max-width: 800px) {
+
+    .about-segment {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        margin: 20px auto;
+    }
+
+    .profile-image  {
+        margin: 0 auto 20px auto;
+    }
+    
+    .about-text {
+        margin: 20px auto 0 auto;
+    }
+
+    .about-text {
+        width: 80%;
+        text-align: justify;
+    }
+   
+
+}
